--- a/Project.toml
+++ b/Project.toml
@@ -5,13 +5,18 @@ version = "0.1.0"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
-CovarianceMatrices = "60f91f6f-d783-54cb-84f9-544141854719"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Distributions = "31c24e10-a181-5053-b920-ddd795508dcc"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NonLinearProg = "59a653e0-4fd1-4c37-892e-cada1571c056"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd52"
+StatsBase = "2913bbd2-ae8-5f58-8ff1-fc4081ba38a5"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 
 [compat]
-CovarianceMatrices = "0.30.3"
 NonLinearProg = "0.1.0"
+
+[sources]
+NonLinearProg = {url = "https://github.com/JuliaPackages/NonLinearProg.jl", rev = "main"}
