--- a/Project.toml
+++ b/Project.toml
@@ -15,8 +15,5 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 
-[compat]
-NonLinearProg = "0.1.0"
-
 [sources]
-NonLinearProg = {url = "https://github.com/JuliaPackages/NonLinearProg.jl", rev = "main"}
+NonLinearProg = {url = "https://github.com/PaulineCorblet/NonLinearProg", rev = "main"}
