--- a/Project.toml
+++ b/Project.toml
@@ -16,4 +16,4 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 
 [sources]
-NonLinearProg = {url = "https://github.com/PaulineCorblet/NonLinearProg", rev = "main"}
+NonLinearProg = {url = "https://github.com/PaulineCorblet/NonLinearProg.git", rev = "main"}
